--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoofddorp</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="header">
@@ -16,19 +19,19 @@
             <li>In 1853 werd besloten Kruisdorp te stichten en de naam is in 12 November 1868 veranderd naar Hoofddorp</li>
             <li>In 1917 werd Schiphol begonnen als militair vliegveld. Het was verwoesd in de oorlog en herbouwd in 1958.</li>
             <li>In 2005 is er een verzoek gedaan om de naam van Hoofddorp te veranderen in Meerstad omdat veel inwooners de huidige naam niet meer passend vinden voor een dorp dat is uitgegroeid tot een stad. Dit verzoek is tot nu toe nog niet doorgevoerd.</li>
-            <li>Hoofddorp had in 2008 26 gemeentelijke, provinciale en rijksmonumenten.</li>
+            <li>In 2008 had Hoofddorp 26 gemeentelijke, provinciale en rijksmonumenten.</li>
             <li>Hoofddorp heeft 78.590 inwooners in 2022.</li>
         </ul>
     </div>
     <div class="col-9">
-        <div> 
+        <div class="bos"> 
             <img src="afbeeldingen/Bos.jpg" alt="Foto van het Haarlemmermeerse bos.">
             <h1>Het Haarlemmermeerse bos</h1>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
             Fugiat, amet. Necessitatibus hic quam repellat nobis laboriosam quos accusantium dolor? 
             Nam officia illo corrupti, suscipit error ullam fugit delectus incidunt cupiditate.</p>
         </div>
-        <div>
+        <div class="museum">
             <img src="afbeeldingen/museum.jpg" alt="Foto van de binnenkant van het museum">
             <h1>Historisch Museum Haarlemmermeer</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi cupiditate, 
